# oxhidifi

./: .gitignore  AGENTS.md  Cargo.toml  clippy.toml  oxhidifi.desktop  playblack_plan.md  style.css
.specify/: feature.json
.specify/memory/: constitution.md
benches/: audio_producer.rs  bench.rs  resampler_baseline.rs
data/: style.css
specs/001-high-fidelity-refactoring/: adaptive-ui-research.md  audio-pipeline-research.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-high-fidelity-refactoring/checklists/: requirements.md
specs/001-high-fidelity-refactoring/contracts/: playback.md  scanner.md  storage.md
src/: app.rs  lib.rs  main.rs
src/audio/: artwork.rs  artwork_cache.rs  artwork_test.rs  buffer_config.rs  constants.rs  decoder.rs  decoder_types.rs  engine.rs  format_detector.rs  gapless_tests.rs  metadata.rs  mod.rs  output.rs  prebuffer.rs  producer.rs  producer_tests.rs  queue_manager.rs  queue_manager_tests.rs  resampler.rs
src/config/: mod.rs  settings.rs
src/data/: album_artists.rs  db.rs  mod.rs  models.rs  scanner.rs  search.rs  watcher.rs
src/data/db/: cleanup.rs  crud.rs  db_cleanup.rs  db_crud.rs  db_dr_sync.rs  db_query.rs  db_schema.rs  dr_sync.rs  mod.rs  query.rs  schema.rs
src/data/scanner/: album_dr_scanner.rs  dr_scanner.rs  file_processor.rs  individual_dr_scanner.rs  library_ops.rs  mod.rs  song_dr_scanner.rs
src/error/: audio_reporting.rs  domain.rs  dr_error.rs  mod.rs  numeric_conversion.rs  operational.rs
src/metrics/: collector.rs  mod.rs
src/playback/: bus_handler.rs  channel.rs  control.rs  controller.rs  decoder.rs  engine.rs  error.rs  events.rs  gapless.rs  layout.rs  mod.rs  output.rs  pipeline.rs  queue.rs  resampler.rs  track_transition.rs  worker.rs
src/playback/controller/: events.rs  main.rs  mod.rs  navigation.rs  queue.rs
src/state/: app_state.rs  mod.rs  zoom_manager.rs
src/storage/: database.rs  migrations.rs  mod.rs  settings.rs
src/threading/: mod.rs
src/ui/: app.rs  application.rs  formatting.rs  header.rs  header_bar.rs  mod.rs  my_app.rs  player_bar.rs  search.rs  search_bar.rs  settings.rs  settings_window.rs  status.rs  tests.rs  utils.rs  window.rs
src/ui/components/: album_card.rs  config.rs  cover_art.rs  dialogs.rs  dr_badge.rs  empty_state.rs  hifi_metadata.rs  mod.rs  navigation.rs  play_overlay.rs  player_bar.rs  refresh.rs  scan_feedback.rs  search_empty_state.rs  sort_list.rs  sorting.rs  sorting_types.rs  tests.rs  tiles.rs
src/ui/components/navigation/: back.rs  core.rs  grid.rs  list_view.rs  mod.rs  nav_shortcuts.rs  nav_sorting.rs  nav_tabs.rs  shortcuts.rs  sorting.rs  tabs.rs  utils.rs
src/ui/components/player_bar/: component.rs  controller_connector.rs  event_handler.rs  mod.rs  ui_builder.rs
src/ui/components/refresh/: helpers.rs  mod.rs  service.rs  setup.rs
src/ui/components/sorting/: mod.rs  sorting_preferences.rs  sorting_types.rs  sorting_ui_utils.rs
src/ui/components/tiles/: album_tile.rs  artist_tile.rs  helpers.rs  mod.rs  text_utils.rs
src/ui/components/view_controls/: button.rs  mod.rs  sorting_controls.rs  view_control_button.rs  view_mode.rs  zoom.rs  zoom_controls.rs  zoom_manager.rs
src/ui/detail/: album.rs  artist.rs  common.rs  mod.rs
src/ui/grids/: album_grid_builder.rs  album_grid_population.rs  album_grid_rebuilder.rs  album_grid_state.rs  album_grid_utils.rs  albums_grid.rs  artist_grid_builder.rs  artist_grid_population.rs  artist_grid_rebuilder.rs  artists_grid.rs  artists_grid_builder.rs  artists_grid_population.rs  artists_grid_rebuilder.rs  async_data_loader.rs  mod.rs
src/ui/grids/album_grid_population/: data_handler.rs  mod.rs  sorting.rs  ui_builder.rs
src/ui/main_window/: builder.rs  handlers.rs  mod.rs  state.rs  widgets.rs
src/ui/main_window/handlers/: dialog_handlers.rs  grid_handlers.rs  keyboard_handlers.rs  mod.rs  navigation_handlers.rs  refresh_handlers.rs  search_handlers.rs  view_mode_handlers.rs
src/ui/pages/: album_page.rs  artist_page.rs  mod.rs
src/ui/pages/album/: album_page.rs  mod.rs
src/ui/pages/artist/: artist_page.rs  mod.rs
src/ui/player/: controls.rs  mod.rs  panel.rs  queue.rs
src/ui/player_bar/: center_section.rs  hifi_calculations.rs  hifi_calculations_tests.rs  hifi_popover.rs  left_section.rs  mod.rs  progress_tracker.rs  right_section.rs  seek_handler.rs  shared_state.rs  state_subscription.rs  volume_popover.rs
src/ui/preferences/: audio_page.rs  dialog.rs  general_page.rs  library_page.rs  mod.rs  tests.rs  utils.rs  widgets.rs
src/ui/search/: live_search.rs  live_search_list_view.rs  mod.rs  search_utils.rs
src/ui/settings/: audio_page.rs  folder_settings.rs  general_page.rs  library_page.rs  mod.rs  settings_dialog.rs
src/ui/settings/folder/: core.rs  data_operations.rs  event_handlers.rs  mod.rs  scanning_operations.rs  ui_components.rs
src/ui/views/: album_columns.rs  album_columns_macro.rs  album_columns_text.rs  album_detail_renderer.rs  album_grid.rs  artist_columns.rs  artist_detail_renderer.rs  artist_grid.rs  column_sorting.rs  column_view.rs  column_view_builder.rs  column_view_subscriptions.rs  column_view_types.rs  column_view_updates.rs  detail_playback.rs  detail_types.rs  detail_view.rs  filtering.rs  list_view.rs  mod.rs  search_highlight.rs  search_results_view.rs  search_results_view_builder.rs  search_results_view_methods.rs  search_results_view_populate_albums.rs  search_results_view_populate_artists.rs  search_results_view_populate_songs.rs  search_results_view_population.rs  search_results_view_subscriptions.rs  search_song_columns.rs  tests.rs  ui_macros.rs
src/ui/views/album_columns/: audio_columns.rs  mod.rs  playback_columns.rs  sorters.rs
src/utils/: best_dr_persistence.rs  formatting.rs  image_cache.rs  image_loader.rs  image_loader_async.rs  metadata_cache.rs  mod.rs  performance_monitor.rs  screen.rs
src/utils/image/: async_loader.rs  error.rs  loader.rs  mod.rs
tests/: abx.rs  gapless.rs  no_device_startup.rs  sample_rate_transitions.rs  seek_control.rs  storage.rs
tests/common/: mod.rs
(+46 files in other folders)
