[package]
edition = "2024"
name = "oxhidifi"
version = "0.1.0"

[dependencies]
# Audio
# crossbeam = "0.8.4"
audioadapter-buffers = "2.0.0"
cpal = { version = "0.17.1", features = ["jack"] }
lofty = "0.22.4"
num-traits = "0.2.19"
rtrb = "0.3.2"
rubato = "1.0.1"
symphonia = { version = "0.5.5", features = ["all"] }

# Concurrency
# dynosaur = "0.3.0"
# rayon = "1.11.0"
async-channel = "2.5.0"
parking_lot = "0.12.5"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# General
libadwaita = { version = "0.8.1", features = [
  "gio_v2_80",
  "gtk_v4_20",
  "v1_8",
] }
notify = "8.2.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }

[dev-dependencies]
# Tests and bechmarking
# criterion = "0.8.1"
# test-log = "0.2.19"
tempfile = "3.24.0"
