[package]
edition = "2024"
name = "oxhidifi-refactor"
version = "0.1.0"

[dependencies]
anyhow = { version = "1.0.103", default-features = false }
async-channel = { version = "2.5.0", features = ["std"] }
cpal = { version = "0.18.1", default-features = false }
#crossbeam = { version = "0.8.4", default-features = false }
#dynosaur = { version = "0.3.0", default-features = false }
hex = { version = "0.4.3", features = ["alloc"] }
libadwaita = { version = "0.9.2", default-features = false, features = [
    "gio_v2_80",
    "gtk_v4_22",
    "v1_9",
] }
lofty = { version = "0.24.0", default-features = false }
notify = { version = "8.2.0", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
parking_lot = { version = "0.12.5", default-features = false }
rayon = { version = "1.12.0", default-features = false }
#regex = { version = "1.12.3", default-features = false }
rtrb = { version = "0.3.4", default-features = false }
rubato = { version = "4.0.0", features = ["fft_resampler"] }
serde = { version = "1.0.228", default-features = false }
serde_json = { version = "1.0.150", default-features = false }
sha2 = { version = "0.11.0", default-features = false }
sqlx = { version = "0.9.0", default-features = false, features = [
    "macros",
    "runtime-tokio",
    "sqlite",
] }
symphonia = { version = "0.6.0", default-features = false, features = ["all"] }
thiserror = { version = "2.0.18", default-features = false }
tokio = { version = "1.53.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
#tokio-stream = { version = "0.1.18", default-features = false }
#tokio-util = { version = "0.7.18", default-features = false }
tracing = { version = "0.1.44", default-features = false }
tracing-appender = { version = "0.2.5", default-features = false }
tracing-subscriber = { version = "0.3.23", default-features = false, features = [
    "ansi",
    "env-filter",
    "json",
] }

[dev-dependencies]
criterion = { version = "0.8.2", default-features = false }
tempfile = { version = "3.27.0", default-features = false }

[[bench]]
harness = false
name = "bench"

[[bench]]
harness = false
name = "resampler_baseline"

[lints.clippy]
# missing_asserts_for_indexing = "deny"
# unused_trait_names = "deny"
arbitrary-source-item-ordering = "deny"
as_ptr_cast_mut = "deny"
assertions_on_result_states = "deny"
clone_on_ref_ptr = "deny"
dbg_macro = "deny"
debug_assert_with_mut_call = "deny"
else_if_without_else = "deny"
empty_drop = "deny"
empty_enum_variants_with_brackets = "deny"
equatable_if_let = "deny"
error_impl_error = "deny"
exit = "deny"
expect_used = "deny"
fn_to_numeric_cast_any = "deny"
get_unwrap = "deny"
if_then_some_else_none = "deny"
imprecise_flops = "deny"
iter_with_drain = "deny"
lossy_float_literal = "deny"
map_err_ignore = "deny"
map_with_unused_argument_over_ranges = "deny"
missing_assert_message = "deny"
missing_docs_in_private_items = "deny"
mutex_atomic = "deny"
mutex_integer = "deny"
needless_collect = "deny"
needless_pass_by_ref_mut = "deny"
needless_raw_strings = "deny"
needless_type_cast = "deny"
option_if_let_else = "deny"
panic = "deny"
panic_in_result_fn = "deny"
print_stderr = "deny"
print_stdout = "deny"
pub_use = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
redundant_clone = "deny"
redundant_feature_names = "deny"
redundant_pub_crate = "deny"
redundant_test_prefix = "deny"
redundant_type_annotations = "deny"
ref_patterns = "deny"
rest_pat_in_fully_bound_structs = "deny"
return_and_then = "deny"
significant_drop_tightening = "deny"
single_option_map = "deny"
string_lit_chars_any = "deny"
suboptimal_flops = "deny"
tests_outside_test_module = "deny"
trait_duplication_in_bounds = "deny"
trivial_regex = "deny"
try_err = "deny"
tuple_array_conversions = "deny"
type_repetition_in_bounds = "deny"
unnecessary_safety_comment = "deny"
unnecessary_safety_doc = "deny"
unnecessary_struct_initialization = "deny"
unreachable = "deny"
unused_peekable = "deny"
unused_result_ok = "deny"
unused_rounding = "deny"
unwrap_in_result = "deny"
unwrap_used = "deny"
use_self = "deny"
useless_let_if_seq = "deny"
